@@ -5524,6 +5524,15 @@ string line 2\"
             & Out$883
           | 
           )
+          (   10090000004431^1/2
+            & 10090000004431^1/2
+            & 10090000004431^1/2
+            &   10090000004431^1/2
+              : ( 10090000004431^1/2
+                | 10067^1/2*1002284693^1/2
+                )
+          | Out$884
+          )
       &   out
         $ ( str
           $ ( "Done. "
